// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform imports as expected 0 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { Whatever } from "@kiwicom/orbit-components/unknown/import";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import { Whatever } from "@kiwicom/orbit-components/unknown/import";
`;

exports[`transform imports as expected 1 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { Alert } from "@kiwicom/orbit-components";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import Alert from "@kiwicom/orbit-components/lib/Alert";
`;

exports[`transform imports as expected 2 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { Alert, Button } from "@kiwicom/orbit-components";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import Button from "@kiwicom/orbit-components/lib/Button";
import Alert from "@kiwicom/orbit-components/lib/Alert";
`;

exports[`transform imports as expected 3 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import Alert from "@kiwicom/orbit-components/lib/Alert";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import Alert from "@kiwicom/orbit-components/lib/Alert";
`;

exports[`transform imports as expected 4 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { ModalSection } from "@kiwicom/orbit-components";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import ModalSection from "@kiwicom/orbit-components/lib/Modal/ModalSection";
`;

exports[`transform imports as expected 5 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { Alert, ModalSection } from "@kiwicom/orbit-components";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import ModalSection from "@kiwicom/orbit-components/lib/Modal/ModalSection";
import Alert from "@kiwicom/orbit-components/lib/Alert";
`;

exports[`transform imports as expected 6 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { Passengers } from "@kiwicom/orbit-components/lib/icons";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import Passengers from "@kiwicom/orbit-components/lib/icons/Passengers";
`;

exports[`transform imports as expected 7 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { LayoutColumn } from "@kiwicom/orbit-components";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import LayoutColumn from "@kiwicom/orbit-components/lib/Layout/LayoutColumn";
`;

exports[`transform imports as expected 8 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { BreadcrumbsItem } from "@kiwicom/orbit-components";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import BreadcrumbsItem from "@kiwicom/orbit-components/lib/Breadcrumbs/BreadcrumbsItem";
`;

exports[`transform imports as expected 9 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { BadgePrimitive } from "@kiwicom/orbit-components";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import BadgePrimitive from "@kiwicom/orbit-components/lib/primitives/BadgePrimitive";
`;

exports[`transform imports as expected 10 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { ListItem } from "@kiwicom/orbit-components";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import ListItem from "@kiwicom/orbit-components/lib/List/ListItem";
`;

exports[`transform imports as expected 11 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { Alert, ModalSection, mediaQueries, useRandomIdSeed } from "@kiwicom/orbit-components";
import { Passengers, Invoice } from "@kiwicom/orbit-components/lib/icons";
import { Accommodation } from "@kiwicom/orbit-components/icons";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import { useRandomIdSeed } from "@kiwicom/orbit-components/lib/hooks/useRandomId";
import mediaQueries from "@kiwicom/orbit-components/lib/utils/mediaQuery";
import ModalSection from "@kiwicom/orbit-components/lib/Modal/ModalSection";
import Alert from "@kiwicom/orbit-components/lib/Alert";
import Invoice from "@kiwicom/orbit-components/lib/icons/Invoice";
import Passengers from "@kiwicom/orbit-components/lib/icons/Passengers";
import Accommodation from "@kiwicom/orbit-components/lib/icons/Accommodation";
`;

exports[`transform imports as expected 12 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { mediaQueries } from "@kiwicom/orbit-components";
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import mediaQueries from "@kiwicom/orbit-components/lib/utils/mediaQuery";
`;

exports[`transform imports as expected 13 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { Text, Stack, Grid } from '@kiwicom/orbit-components';
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import Grid from "@kiwicom/orbit-components/lib/utils/Grid";
import Stack from "@kiwicom/orbit-components/lib/Stack";
import Text from "@kiwicom/orbit-components/lib/Text";
`;

exports[`transform imports as expected 14 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { Icon, Icons } from '@kiwicom/orbit-components'
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import Icons from "@kiwicom/orbit-components/lib/icons";
import Icon from "@kiwicom/orbit-components/lib/Icon";
`;

exports[`transform imports as expected 15 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
import { Grid } from '@kiwicom/orbit-components/icons'
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import Grid from "@kiwicom/orbit-components/lib/icons/Grid";
`;
